<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/dawn_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:gravity="center"
            android:text="@string/version"
            android:textAppearance="@style/TextAppearance.Roboto.Bold.Headline6"
            android:textColor="@color/spicy_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:gravity="center"
            android:text="@string/by"
            android:textAppearance="@style/TextAppearance.Roboto.Regular.Body2"
            android:textColor="@color/spicy_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVersion" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:gravity="center"
            android:text="@string/my_name"
            android:textAppearance="@style/TextAppearance.Roboto.Regular.Body2"
            android:textColor="@color/spicy_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBy" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNIM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:gravity="center"
            android:text="@string/NIM"
            android:textAppearance="@style/TextAppearance.Roboto.Regular.Body2"
            android:textColor="@color/spicy_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:layout_marginBottom="@dimen/screen_margin"
            android:gravity="center"
            android:text="@string/class_name"
            android:textAppearance="@style/TextAppearance.Roboto.Regular.Body2"
            android:textColor="@color/spicy_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNIM" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>